--- a/main/plugins/org.talend.hadoop.distribution.qubole/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.qubole/plugin.xml
@@ -205,45 +205,51 @@
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.qubole"
-            id="spark-catalyst_2.11-2.2.1.jar"
-            name="spark-catalyst_2.11-2.2.1.jar"
-            mvn_uri="mvn:org.apache.spark/spark-catalyst_2.11/2.2.1">
+            id="spark-catalyst_2.11-2.2.0.jar"
+            name="spark-catalyst_2.11-2.2.0.jar"
+            mvn_uri="mvn:org.apache.spark/spark-catalyst_2.11/2.2.0">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.qubole"
-            id="spark-core_2.11-2.2.1.jar"
-            name="spark-core_2.11-2.2.1.jar"
-            mvn_uri="mvn:org.apache.spark/spark-core_2.11/2.2.1">
+            id="spark-core_2.11-2.2.0.jar"
+            name="spark-core_2.11-2.2.0.jar"
+            mvn_uri="mvn:org.apache.spark/spark-core_2.11/2.2.0">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.qubole"
-            id="spark-graphx_2.11-2.2.1.jar"
-            name="spark-graphx_2.11-2.2.1.jar"
-            mvn_uri="mvn:org.apache.spark/spark-graphx_2.11/2.2.1">
+            id="spark-graphx_2.11-2.2.0.jar"
+            name="spark-graphx_2.11-2.2.0.jar"
+            mvn_uri="mvn:org.apache.spark/spark-graphx_2.11/2.2.0">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.qubole"
-            id="spark-hive_2.11-2.2.1.jar"
-            name="spark-hive_2.11-2.2.1.jar"
-            mvn_uri="mvn:org.apache.spark/spark-hive_2.11/2.2.1">
+            id="spark-hive_2.11-2.2.0.jar"
+            name="spark-hive_2.11-2.2.0.jar"
+            mvn_uri="mvn:org.apache.spark/spark-hive_2.11/2.2.0">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.qubole"
-            id="spark-mllib-local_2.11-2.2.1.jar"
-            name="spark-mllib-local_2.11-2.2.1.jar"
-            mvn_uri="mvn:org.apache.spark/spark-mllib-local_2.11/2.2.1">
+            id="spark-mllib_2.11-2.2.0.jar"
+            name="spark-mllib_2.11-2.2.0.jar"
+            mvn_uri="mvn:org.apache.spark/spark-mllib_2.11/2.2.0">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.qubole"
-            id="spark-network-common_2.11-2.2.1.jar"
-            name="spark-network-common_2.11-2.2.1.jar"
-            mvn_uri="mvn:org.apache.spark/spark-network-common_2.11/2.2.1">
+            id="spark-mllib-local_2.11-2.2.0.jar"
+            name="spark-mllib-local_2.11-2.2.0.jar"
+            mvn_uri="mvn:org.apache.spark/spark-mllib-local_2.11/2.2.0">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.qubole"
-            id="spark-sql_2.11-2.2.1.jar"
-            name="spark-sql_2.11-2.2.1.jar"
-            mvn_uri="mvn:org.apache.spark/spark-sql_2.11/2.2.1">
+            id="spark-network-common_2.11-2.2.0.jar"
+            name="spark-network-common_2.11-2.2.0.jar"
+            mvn_uri="mvn:org.apache.spark/spark-network-common_2.11/2.2.0">
+        </libraryNeeded>
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.qubole"
+            id="spark-sql_2.11-2.2.0.jar"
+            name="spark-sql_2.11-2.2.0.jar"
+            mvn_uri="mvn:org.apache.spark/spark-sql_2.11/2.2.0">
         </libraryNeeded>
         
         <libraryNeeded
@@ -371,12 +377,13 @@
              <library id="kryo-shaded-3.0.3.jar"/>
              <library id="scala-library-2.11.8.jar"/>
              <library id="scala-reflect-2.11.8.jar"/>
-             <library id="spark-mllib-local_2.11-2.2.1.jar"/>
-             <library id="spark-catalyst_2.11-2.2.1.jar"/>
-             <library id="spark-core_2.11-2.2.1.jar"/>
-             <library id="spark-graphx_2.11-2.2.1.jar"/>
-             <library id="spark-sql_2.11-2.2.1.jar"/>
-             <library id="spark-network-common_2.11-2.2.1.jar"/>
+             <library id="spark-mllib-local_2.11-2.2.0.jar"/>
+             <library id="spark-mllib_2.11-2.2.0.jar"/>
+             <library id="spark-catalyst_2.11-2.2.0.jar"/>
+             <library id="spark-core_2.11-2.2.0.jar"/>
+             <library id="spark-graphx_2.11-2.2.0.jar"/>
+             <library id="spark-sql_2.11-2.2.0.jar"/>
+             <library id="spark-network-common_2.11-2.2.0.jar"/>
              <library id="jaxen-1.1.6.jar"/>
         </libraryNeededGroup>
 
