--- a/main/plugins/org.talend.hadoop.distribution.qubole/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.qubole/plugin.xml
@@ -296,8 +296,8 @@
             mvn_uri="mvn:org.talend.libraries/jaxen-1.1.6/6.0.0">
         </libraryNeeded>
 
-        <!-- Module Group: dependencies for big data launcher jar -->
-        <libraryNeededGroup description="libjars" id="BIGDATA-LAUNCHER-LIB-QUBOLE" name="BIGDATA-LAUNCHER-LIB-QUBOLE ">
+        <!-- Big data launcher group -->
+        <libraryNeededGroup description="qubole big data launcher and its dependencies" id="BIGDATA-LAUNCHER-LIB-QUBOLE" name="BIGDATA-LAUNCHER-LIB-QUBOLE ">
             <library id="talend-bigdata-launcher-qubole-1.2.5-20180705.jar" />
             <library id="qds-sdk-java-0.9.1.jar" />
             <library id="javax.ws.rs-api-2.0.jar" />
@@ -317,8 +317,8 @@
             <library id="javax.inject-2.2.0-b21.jar" />
         </libraryNeededGroup>
 
-        <!-- Module Group: aws s3 sdk -->
-        <libraryNeededGroup description="necessary dependencies for simple s3 operation" id="S3-LIB-QUBOLE" name="S3-LIB-QUBOLE">
+        <!-- S3 sdk group -->
+        <libraryNeededGroup description="s3 sdk and its dependencies" id="S3-LIB-QUBOLE" name="S3-LIB-QUBOLE">
             <library id="aws-java-sdk-s3-1.11.160.jar" />
             <library id="aws-java-sdk-core-1.11.160.jar" />
             <library id="commons-logging-1.1.3.jar" />
@@ -330,19 +330,19 @@
             <library id="joda-time-2.8.1.jar" />
         </libraryNeededGroup>
 
-        <!-- Module Group: jars for pig parquet loader/storer -->
-        <libraryNeededGroup description="Jars for pig parquet loader/storer" id="PIG-PARQUET-LIB-QUBOLE" name="PIG-PARQUET-LIB-QUBOLE">
+        <!-- Pig parquet loader/storer group -->
+        <libraryNeededGroup description="Pig parquet loader/storer libraries for Qubole" id="PIG-PARQUET-LIB-QUBOLE" name="PIG-PARQUET-LIB-QUBOLE">
             <library id="parquet-pig-bundle-1.5.0.jar" />
             <library id="parquet-pig-1.5.0.jar" />
         </libraryNeededGroup>
 
-        <!-- Module Group: jars for pig avro loader/storer -->
-        <libraryNeededGroup description="Jars for pig avro loader/storer" id="PIG-AVRO-LIB-QUBOLE" name="PIG-AVRO-LIB-QUBOLE">
+        <!-- Pig avro loader/storer group -->
+        <libraryNeededGroup description="Pig avro loader/storer libraries for Qubole" id="PIG-AVRO-LIB-QUBOLE" name="PIG-AVRO-LIB-QUBOLE">
             <library id="piggybank-cdh5.4.jar"/>
             <library id="avro-1.7.6.jar"/>
         </libraryNeededGroup>
 
-        <!-- Module Group: jars for pig sequence file loader/storer -->
+        <!-- Pig sequence file loader/storer group -->
         <libraryNeededGroup description="Pig SequenceFile libraries for Qubole" id="PIG-SEQUENCEFILE-LIB-QUBOLE" name="PIG-SEQUENCEFILE-LIB-QUBOLE">
             <library id="elephant-bird-core-4.9.jar"/>
             <library id="elephant-bird-hadoop-compat-4.9.jar"/>
@@ -350,7 +350,7 @@
             <library id="pigutil.jar"/>
         </libraryNeededGroup>
 
-        <!-- Module Group: jars for pig RCFile loader/storer -->
+        <!-- Pig RCFile loader/storer group -->
         <libraryNeededGroup description="Pig RCFile libraries for Qubole" id="PIG-RCFILE-LIB-QUBOLE" name="PIG-RCFILE-LIB-QUBOLE">
             <library id="hive-common-1.1.0.jar"/>
             <library id="hive-exec-1.1.0.jar"/>
@@ -360,9 +360,9 @@
             <library id="elephant-bird-rcfile-4.9-patched-hive-1.x.jar"/>
         </libraryNeededGroup>
         
-        <!-- Module Group: jars for spark 2 job-->
+        <!-- Spark 2.2 group -->
         <libraryNeededGroup
-           description="Spark 2 libraries for Qubole" id="SPARK-LIB-QUBOLE" name="SPARK-LIB-QUBOLE">
+           description="Spark 2.2 libraries for Qubole" id="SPARK-LIB-QUBOLE" name="SPARK-LIB-QUBOLE">
 			 <library id="avro-1.7.6.jar"/>
              <library id="avro-mapred-1.7.7-hadoop2.jar"/>
              <library id="commons-lang3-3.5.jar"/>
@@ -388,12 +388,10 @@
              <library id="jaxen-1.1.6.jar"/>
         </libraryNeededGroup>
 
-        <!-- To be removed -->
         <libraryNeededGroup description="Hive libraries" id="HIVE-LIB-QUBOLE" name="HIVE-LIB-QUBOLE">
         </libraryNeededGroup>
 
-        <!-- To be removed -->
-        <libraryNeededGroup description="Pig libraries for tPigLoad" id="PIG-LIB-QUBOLE" name="PIG-LIB-QUBOLE">
+        <libraryNeededGroup description="Pig libraries" id="PIG-LIB-QUBOLE" name="PIG-LIB-QUBOLE">
         </libraryNeededGroup>
 
     </extension>
