--- a/main/plugins/org.talend.hadoop.distribution.hdp260/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp260/plugin.xml
@@ -1247,6 +1247,9 @@
             <library id="commons-configuration-1.6.jar"/>
             <library id="commons-lang-2.6.jar"/>
             <library id="commons-logging-1.1.3.jar"/>
+            <library id="datanucleus-api-jdo-3.2.6.jar"/>
+            <library id="datanucleus-core-3.2.10.jar"/>
+            <library id="datanucleus-rdbms-3.2.9.jar"/>
             <library id="guava-11.0.2.jar"/>
             <library id="hadoop-mapreduce-client-common-HDP_2_6"/>
             <library id="hadoop-mapreduce-client-core-HDP_2_6"/>
