--- a/main/plugins/org.talend.hadoop.distribution.qubole/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.qubole/plugin.xml
@@ -46,33 +46,36 @@
 
 		<!-- jars to change -->
 		<libraryNeeded
-			context="plugin:org.talend.libraries.pig"
-			id="parquet-pig-bundle-1.5.0.jar"
-			name="parquet-pig-bundle-1.5.0.jar"
-			mvn_uri="mvn:org.talend.libraries/parquet-pig-bundle-1.5.0-cdh5.12.1/6.0.0" />
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="parquet-pig-bundle-1.5.0-cdh5.12.1.jar"
+			name="parquet-pig-bundle-1.5.0-cdh5.12.1.jar"
+			mvn_uri="mvn:com.twitter/parquet-pig-bundle/1.5.0-cdh5.12.1">
+		</libraryNeeded>
+
 		<libraryNeeded
-			context="plugin:org.talend.libraries.pig"
+			context="plugin:org.talend.hadoop.distribution.qubole"
 			id="avro-1.7.6.jar"
 			name="avro-1.7.6.jar"
-			mvn_uri="mvn:org.talend.libraries/avro-1.7.6/6.0.0" />
-        <libraryNeeded
-            context="plugin:org.talend.libraries.pig"
-            id="elephant-bird-core-4.9.jar"
-            name="elephant-bird-core-4.9.jar"
-            mvn_uri="mvn:org.talend.libraries/elephant-bird-core-4.9/6.0.0">
-        </libraryNeeded>
-        <libraryNeeded
-            context="plugin:org.talend.libraries.pig"
-            id="elephant-bird-hadoop-compat-4.9.jar"
-            name="elephant-bird-hadoop-compat-4.9.jar"
-            mvn_uri="mvn:org.talend.libraries/elephant-bird-hadoop-compat-4.9/6.0.0">
-        </libraryNeeded>
-        <libraryNeeded
-            context="plugin:org.talend.libraries.pig"
-            id="elephant-bird-pig-4.9.jar"
-            name="elephant-bird-pig-4.9.jar"
-            mvn_uri="mvn:org.talend.libraries/elephant-bird-pig-4.9/6.0.0">
-        </libraryNeeded>
+			mvn_uri="mvn:org.apache.avro/avro/1.7.6">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="elephant-bird-core-4.9.jar"
+			name="elephant-bird-core-4.9.jar"
+			mvn_uri="mvn:com.twitter.elephantbird/elephant-bird-core/4.9">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="elephant-bird-hadoop-compat-4.9.jar"
+			name="elephant-bird-hadoop-compat-4.9.jar"
+			mvn_uri="mvn:com.twitter.elephantbird/elephant-bird-hadoop-compat/4.9">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="elephant-bird-pig-4.9.jar"
+			name="elephant-bird-pig-4.9.jar"
+			mvn_uri="mvn:com.twitter.elephantbird/elephant-bird-pig/4.9">
+		</libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.libraries.pig"
             id="hive-common-1.1.0.jar"
@@ -92,194 +95,198 @@
             mvn_uri="mvn:org.apache.hive/hive-serde/1.1.0">
         </libraryNeeded>
 
-        <libraryNeeded
-            context="plugin:org.talend.libraries.s3"
-            id="aws-java-sdk-s3-1.11.160.jar"
-            name="aws-java-sdk-s3-1.11.160.jar"
-            mvn_uri="mvn:org.talend.libraries/aws-java-sdk-s3-1.11.160/6.0.0"/>
-       	<libraryNeeded
-            context="plugin:org.talend.libraries.s3"
-            id="aws-java-sdk-core-1.11.160.jar"
-            name="aws-java-sdk-core-1.11.160.jar"
-            mvn_uri="mvn:org.talend.libraries/aws-java-sdk-core-1.11.160/6.0.0"/>
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.qubole"
-            id="commons-logging-1.1.3.jar"
-            name="commons-logging-1.1.3.jar"
-            mvn_uri="mvn:org.talend.libraries/commons-logging-1.1.3/6.0.0"/>
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.qubole"
-            id="jackson-databind-2.6.5.jar"
-            name="jackson-databind-2.6.5.jar"
-            mvn_uri="mvn:org.talend.libraries/jackson-databind-2.6.5/6.0.0"/>
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.qubole"
-            id="jackson-core-2.6.6.jar"
-            name="jackson-core-2.6.6.jar"
-            mvn_uri="mvn:org.talend.libraries/jackson-core-2.6.6/6.0.0"/>
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.qubole"
-            id="httpclient-4.5.2.jar"
-            name="httpclient-4.5.2.jar"
-            mvn_uri="mvn:org.talend.libraries/httpclient-4.5.2/6.0.0"/>
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.qubole"
-            id="httpcore-4.4.4.jar"
-            name="httpcore-4.4.4.jar"
-            mvn_uri="mvn:org.talend.libraries/httpcore-4.4.4/6.3.0"/>
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.qubole"
-            id="joda-time-2.8.1.jar"
-            name="joda-time-2.8.1.jar"
-            mvn_uri="mvn:org.talend.libraries/joda-time-2.8.1/6.3.0"/>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="aws-java-sdk-s3-1.11.160.jar"
+			name="aws-java-sdk-s3-1.11.160.jar"
+			mvn_uri="mvn:com.amazonaws/aws-java-sdk-s3/1.11.160">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="aws-java-sdk-core-1.11.160.jar"
+			name="aws-java-sdk-core-1.11.160.jar"
+			mvn_uri="mvn:com.amazonaws/aws-java-sdk-core/1.11.160">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="commons-logging-1.1.3.jar"
+			name="commons-logging-1.1.3.jar"
+			mvn_uri="mvn:commons-logging/commons-logging/1.1.3">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="jackson-databind-2.6.5.jar"
+			name="jackson-databind-2.6.5.jar"
+			mvn_uri="mvn:com.fasterxml.jackson.core/jackson-databind/2.6.5">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="jackson-core-2.6.6.jar"
+			name="jackson-core-2.6.6.jar"
+			mvn_uri="mvn:com.fasterxml.jackson.core/jackson-core/2.6.6">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="httpclient-4.5.2.jar"
+			name="httpclient-4.5.2.jar"
+			mvn_uri="mvn:org.apache.httpcomponents/httpclient/4.5.2">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="httpcore-4.4.4.jar"
+			name="httpcore-4.4.4.jar"
+			mvn_uri="mvn:org.apache.httpcomponents/httpcore/4.4.4">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="joda-time-2.8.1.jar"
+			name="joda-time-2.8.1.jar"
+			mvn_uri="mvn:joda-time/joda-time/2.8.1">
+		</libraryNeeded>
             
         <!-- Talend jars for Spark 2 -->
-        <libraryNeeded 
-         	context="plugin:org.talend.hadoop.distribution.qubole" 
-         	id="commons-codec-1.10.jar" 
-         	name="commons-codec-1.10.jar" 
-         	mvn_uri="mvn:org.talend.libraries/commons-codec-1.10/6.0.0"/>
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.qubole"
-            id="commons-lang-2.6.jar"
-            name="commons-lang-2.6.jar"
-            mvn_uri="mvn:org.talend.libraries/commons-lang-2.6/6.0.0">
-        </libraryNeeded>
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.qubole"
-            id="commons-lang3-3.5.jar"
-            name="commons-lang3-3.5.jar"
-            mvn_uri="mvn:org.talend.libraries/commons-lang3-3.5/6.0.0">
-        </libraryNeeded>
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.qubole"
-            id="commons-logging-1.2.jar"
-            name="commons-logging-1.2.jar"
-            mvn_uri="mvn:org.talend.libraries/commons-logging-1.2/6.0.0">
-        </libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="commons-codec-1.10.jar"
+			name="commons-codec-1.10.jar"
+			mvn_uri="mvn:commons-codec/commons-codec/1.10">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="commons-lang-2.6.jar"
+			name="commons-lang-2.6.jar"
+			mvn_uri="mvn:commons-lang/commons-lang/2.6">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="commons-lang3-3.5.jar"
+			name="commons-lang3-3.5.jar"
+			mvn_uri="mvn:org.apache.commons/commons-lang3/3.5">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="commons-logging-1.2.jar"
+			name="commons-logging-1.2.jar"
+			mvn_uri="mvn:commons-logging/commons-logging/1.2">
+		</libraryNeeded>
         
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.qubole"
-            id="hadoop-common-2.7.3.jar"
-            name="hadoop-common-2.7.3.jar"
-            mvn_uri="mvn:org.talend.libraries/hadoop-common-2.7.3/6.0.0">
-        </libraryNeeded>
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.qubole"
-            id="hadoop-mapreduce-client-core-2.7.3.jar"
-            name="hadoop-mapreduce-client-core-2.7.3.jar"
-            mvn_uri="mvn:org.talend.libraries/hadoop-mapreduce-client-core-2.7.3/6.0.0">
-        </libraryNeeded>
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.qubole"
-            id="kryo-shaded-3.0.3.jar"
-            name="kryo-shaded-3.0.3.jar"
-            mvn_uri="mvn:org.talend.libraries/kryo-shaded-3.0.3/6.0.0">
-        </libraryNeeded>
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.qubole"
-            id="scala-library-2.11.8.jar"
-            name="scala-library-2.11.8.jar"
-            mvn_uri="mvn:org.talend.libraries/scala-library-2.11.8/6.0.0">
-        </libraryNeeded>
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.qubole"
-            id="scala-reflect-2.11.8.jar"
-            name="scala-reflect-2.11.8.jar"
-            mvn_uri="mvn:org.talend.libraries/scala-reflect-2.11.8/6.0.0">
-        </libraryNeeded>
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.qubole"
-            id="slf4j-api-1.7.16.jar"
-            name="slf4j-api-1.7.16.jar"
-            mvn_uri="mvn:org.talend.libraries/slf4j-api-1.7.16/6.0.0">
-        </libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="hadoop-common-2.7.3.jar"
+			name="hadoop-common-2.7.3.jar"
+			mvn_uri="mvn:org.apache.hadoop/hadoop-common/2.7.3">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="hadoop-mapreduce-client-core-2.7.3.jar"
+			name="hadoop-mapreduce-client-core-2.7.3.jar"
+			mvn_uri="mvn:org.apache.hadoop/hadoop-mapreduce-client-core/2.7.3">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="kryo-shaded-3.0.3.jar"
+			name="kryo-shaded-3.0.3.jar"
+			mvn_uri="mvn:com.esotericsoftware/kryo-shaded/3.0.3">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="scala-library-2.11.8.jar"
+			name="scala-library-2.11.8.jar"
+			mvn_uri="mvn:org.scala-lang/scala-library/2.11.8">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="scala-reflect-2.11.8.jar"
+			name="scala-reflect-2.11.8.jar"
+			mvn_uri="mvn:org.scala-lang/scala-reflect/2.11.8">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="slf4j-api-1.7.16.jar"
+			name="slf4j-api-1.7.16.jar"
+			mvn_uri="mvn:org.slf4j/slf4j-api/1.7.16">
+		</libraryNeeded>
 
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.qubole"
-            id="spark-catalyst_2.11-2.2.0.jar"
-            name="spark-catalyst_2.11-2.2.0.jar"
-            mvn_uri="mvn:org.talend.libraries/spark-catalyst_2.11/6.0.0">
-        </libraryNeeded>
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.qubole"
-            id="spark-core_2.11-2.2.0.jar"
-            name="spark-core_2.11-2.2.0.jar"
-            mvn_uri="mvn:org.talend.libraries/spark-core_2.11/6.0.0">
-        </libraryNeeded>
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.qubole"
-            id="spark-graphx_2.11-2.2.0.jar"
-            name="spark-graphx_2.11-2.2.0.jar"
-            mvn_uri="mvn:org.talend.libraries/spark-graphx_2.11/6.0.0">
-        </libraryNeeded>
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.qubole"
-            id="spark-mllib_2.11-2.2.0.jar"
-            name="spark-mllib_2.11-2.2.0.jar"
-            mvn_uri="mvn:org.talend.libraries/spark-mllib_2.11/6.0.0">
-        </libraryNeeded>
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.qubole"
-            id="spark-mllib-local_2.11-2.2.0.jar"
-            name="spark-mllib-local_2.11-2.2.0.jar"
-            mvn_uri="mvn:org.talend.libraries/spark-mllib-local_2.11/6.0.0">
-        </libraryNeeded>
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.qubole"
-            id="spark-network-common_2.11-2.2.0.jar"
-            name="spark-network-common_2.11-2.2.0.jar"
-            mvn_uri="mvn:org.talend.libraries/spark-network-common_2.11/6.0.0">
-        </libraryNeeded>
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.qubole"
-            id="spark-sql_2.11-2.2.0.jar"
-            name="spark-sql_2.11-2.2.0.jar"
-            mvn_uri="mvn:org.talend.libraries/spark-sql_2.11/6.0.0">
-        </libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="spark-catalyst_2.11-2.2.0.jar"
+			name="spark-catalyst_2.11-2.2.0.jar"
+			mvn_uri="mvn:org.apache.spark/spark-catalyst_2.11/2.2.0">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="spark-core_2.11-2.2.0.jar"
+			name="spark-core_2.11-2.2.0.jar"
+			mvn_uri="mvn:org.apache.spark/spark-core_2.11/2.2.0">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="spark-graphx_2.11-2.2.0.jar"
+			name="spark-graphx_2.11-2.2.0.jar"
+			mvn_uri="mvn:org.apache.spark/spark-graphx_2.11/2.2.0">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="spark-mllib_2.11-2.2.0.jar"
+			name="spark-mllib_2.11-2.2.0.jar"
+			mvn_uri="mvn:org.apache.spark/spark-mllib_2.11/2.2.0">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="spark-mllib-local_2.11-2.2.0.jar"
+			name="spark-mllib-local_2.11-2.2.0.jar"
+			mvn_uri="mvn:org.apache.spark/spark-mllib-local_2.11/2.2.0">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="spark-network-common_2.11-2.2.0.jar"
+			name="spark-network-common_2.11-2.2.0.jar"
+			mvn_uri="mvn:org.apache.spark/spark-network-common_2.11/2.2.0">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="spark-sql_2.11-2.2.0.jar"
+			name="spark-sql_2.11-2.2.0.jar"
+			mvn_uri="mvn:org.apache.spark/spark-sql_2.11/2.2.0">
+		</libraryNeeded>
         
-        <libraryNeeded
-              bundleID="org.apache.servicemix.bundles.wsdl4j"
-              context="plugin:org.talend.libraries.apache.cxf"
-              id="wsdl4j-1.6.3.jar"
-              mvn_uri="mvn:org.talend.libraries/wsdl4j-1.6.3/6.0.0"
-              name="wsdl4j-1.6.3.jar"
-              uripath="platform:/plugin/org.talend.libraries.apache.cxf/lib/wsdl4j-1.6.3.jar">
-        </libraryNeeded>
-        <libraryNeeded
-            context="plugin:org.talend.libraries.jackson"
-            id="jackson-core-2.8.9.jar"
-            name="jackson-core-2.8.9.jar"
-            mvn_uri="mvn:org.talend.libraries/jackson-core-2.8.9/6.0.0"
-            uripath="platform:/plugin/org.talend.libraries.jackson/lib/jackson-core-2.8.9.jar">
-        </libraryNeeded>
-        <libraryNeeded
-            context="plugin:org.talend.libraries.apache.cxf"
-            id="cxf-rt-rs-client-3.2.4.jar"
-            name="cxf-rt-rs-client-3.2.4.jar"
-            mvn_uri="mvn:org.talend.libraries/cxf-rt-rs-client-3.2.4/6.0.0"
-            uripath="platform:/plugin/org.talend.libraries.apache.cxf/lib/cxf-rt-rs-client-3.2.4.jar">
-        </libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="wsdl4j-1.6.3.jar"
+			name="wsdl4j-1.6.3.jar"
+			mvn_uri="mvn:wsdl4j/wsdl4j/1.6.3">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="jackson-core-2.8.9.jar"
+			name="jackson-core-2.8.9.jar"
+			mvn_uri="mvn:com.fasterxml.jackson.core/jackson-core/2.8.9">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="cxf-rt-rs-client-3.2.4.jar"
+			name="cxf-rt-rs-client-3.2.4.jar"
+			mvn_uri="mvn:org.apache.cxf/cxf-rt-rs-client/3.2.4">
+		</libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.libraries.apache.cxf"
             id="cxf-bundle-jaxrs-2.7.18.jar"
             name="cxf-bundle-jaxrs-2.7.18.jar"
             mvn_uri="mvn:org.apache.cxf/cxf-bundle-jaxrs/2.7.18"
             uripath="platform:/plugin/org.talend.libraries.apache.cxf/lib/cxf-bundle-jaxrs-2.7.18.jar">
-        </libraryNeeded>
-        <libraryNeeded
-            context="plugin:org.talend.libraries.jackson"
-            id="json_simple-1.1.jar"
-            name="json_simple-1.1.jar"
-            mvn_uri="mvn:org.talend.libraries/json_simple-1.1/6.0.0"
-            uripath="platform:/plugin/org.talend.libraries.jackson/lib/json_simple-1.1.jar">
-        </libraryNeeded>
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.qubole"
-            id="jaxen-1.1.6.jar"
-            name="jaxen-1.1.6.jar"
-            mvn_uri="mvn:org.talend.libraries/jaxen-1.1.6/6.0.0">
-        </libraryNeeded>
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="json-simple-1.1.jar"
+			name="json-simple-1.1.jar"
+			mvn_uri="mvn:com.googlecode.json-simple/json-simple/1.1">
+		</libraryNeeded>
+		<libraryNeeded
+			context="plugin:org.talend.hadoop.distribution.qubole"
+			id="jaxen-1.1.6.jar"
+			name="jaxen-1.1.6.jar"
+			mvn_uri="mvn:jaxen/jaxen/1.1.6">
+		</libraryNeeded>
 
         <!-- Big data launcher group -->
         <libraryNeededGroup description="qubole big data launcher and its dependencies" id="BIGDATA-LAUNCHER-LIB-QUBOLE" name="BIGDATA-LAUNCHER-LIB-QUBOLE ">
