--- a/main/plugins/org.talend.hadoop.distribution.emr5150/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr5150/plugin.xml
@@ -433,28 +433,28 @@
             context="plugin:org.talend.hadoop.distribution.emr5150"
             id="parquet-avro-1.6.0.jar"
             name="parquet-avro-1.6.0.jar"
-            mvn_uri="mvn:org.apache.parquet/parquet-avro/1.6.0">
+            mvn_uri="mvn:com.twitter/parquet-avro/1.6.0">
         </libraryNeeded>
         
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr5150"
             id="parquet-common-1.6.0.jar"
             name="parquet-common-1.6.0.jar"
-            mvn_uri="mvn:org.apache.parquet/parquet-common/1.6.0">
+            mvn_uri="mvn:com.twitter/parquet-common/1.6.0">
         </libraryNeeded>
         
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr5150"
             id="parquet-hadoop-1.6.0.jar"
             name="parquet-hadoop-1.6.0.jar"
-            mvn_uri="mvn:org.apache.parquet/parquet-hadoop/1.6.0">
+            mvn_uri="mvn:com.twitter/parquet-hadoop/1.6.0">
         </libraryNeeded>
         
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr5150"
             id="parquet-column-1.6.0.jar"
             name="parquet-column-1.6.0.jar"
-            mvn_uri="mvn:org.apache.parquet/parquet-column/1.6.0">
+            mvn_uri="mvn:com.twitter/parquet-column/1.6.0">
         </libraryNeeded>
         
         <libraryNeeded
@@ -553,10 +553,10 @@
         
         <!-- GraphFrames libraries -->
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.mer5150"
+            context="plugin:org.talend.hadoop.distribution.emr5150"
             id="graphframes-0.5.0-spark2.1-s_2.11.jar"
             name="graphframes-0.5.0-spark2.1-s_2.11.jar"
-            mvn_uri="mvn:org.talend.libraries/graphframes/0.5.0-spark2.1-s_2.11">
+            mvn_uri="mvn:graphframes/graphframes/0.5.0-spark2.1-s_2.11">
         </libraryNeeded>
         
         <!-- Spark2 libraries -->
